# cis4620

hw2-curve-editor/: CMakeLists.txt  README.md
hw2-curve-editor/UnityPlugin/Assets/Materials/Curve/: ControlPointMaterial.mat  KeyPointMaterial.mat  LineMaterial.mat  ShipMaterial.mat  TransparentMaterial.mat
hw2-curve-editor/UnityPlugin/Assets/Plugins/: CurvePlugin.exp  CurvePlugin.lib
hw2-curve-editor/UnityPlugin/Assets/Prefabs/: DLL Manipulator.prefab
hw2-curve-editor/UnityPlugin/Assets/Prefabs/Curve/: Control Point Line.prefab  Control Point.prefab  Curve Line.prefab  Curve Operator.prefab  Curve.prefab  Ground.prefab  Key Point.prefab  Ship.prefab
hw2-curve-editor/UnityPlugin/Assets/Scenes/: Curve.unity
hw2-curve-editor/UnityPlugin/Assets/Scripts/Curve/: AnimatedObjectController.cs  CurveController.cs  CurveOperator.cs  CurvePluginManager.cs  CurvePointGizmoController.cs  CurveUIController.cs  PointColorController.cs
hw2-curve-editor/UnityPlugin/Assets/Scripts/Plugin/: PluginHelpFunction.cs
hw2-curve-editor/UnityPlugin/Assets/Scripts/UI/: InputFieldController.cs
hw2-curve-editor/UnityPlugin/Assets/Shaders/: AlwaysOnTop.shader  GridShader.shader
hw2-curve-editor/UnityPlugin/ProjectSettings/: ProjectSettings.asset  TagManager.asset
hw2-curve-editor/src/animation/: aActor.cpp  aActor.h  aBVHController.cpp  aBVHController.h  aBehaviorController.cpp  aBehaviorController.h  aBehaviors.cpp  aBehaviors.h  aFireworks.cpp  aFireworks.h  aIKController.cpp  aIKController.h  aJoint-soln.cpp  aJoint.cpp  aParticle.cpp  aParticle.h  aParticleSystem.cpp  aParticleSystem.h  aRocket.cpp  aRocket.h  aRotation.cpp  aRotation.h  aSkeleton.cpp  aSpark.cpp  aSpark.h  aSplineQuat.cpp  aSplineQuat.h  aSplineVec3.cpp  aSplineVec3.h  aTransform.cpp
hw2-curve-editor/src/plugin/: BehaviorPlugin.cpp  CurvePlugin.cpp  FKIKPlugin.cpp  ParticlePlugin.cpp  Plugin.h
hw2-curve-editor/src/viewer/: FBXModel.cpp  FBXModel.h  FKMain.cpp  FKViewer.cpp  FKViewer.h  behaviorMain.cpp  behaviorViewer.cpp  behaviorViewer.h  curveMain.cpp  curveViewer.cpp  curveViewer.h  particleViewer.cpp  particleViewer.h  utils.cpp  utils.h
